--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "test" : [
+            "vendor/bin/phpunit"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
